bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: unclosed character literal
while(action!='')){
              ^BDR:2: error: ')' expected but something found.
while(action!='')){
              ^BDR:25: error: illegal start of simple expression
	}
        ^